--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -22,7 +22,7 @@
         android:id="@+id/action_list"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_list_24"
-        android:title="리스트"/>
+        android:title="카테고리"/>
 
     <item
         android:id="@+id/action_person"
